# codex-quota-trends

./: .gitignore  AGENTS.md  Cargo.toml  README.md  design-qa.md  justfile
.github/workflows/: release.yml
apps/gui/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/gui/src/: App.tsx  main.tsx  styles.css  types.ts
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/capabilities/: default.json
apps/gui/src-tauri/icons/: icon.rgba  tray-template.rgba
apps/gui/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  update.rs
apps/gui/src/api/: quota-api.ts
apps/gui/src/components/: app-shell.tsx  collector-status.tsx  quota-ring.tsx  token-activity-card.test.ts  token-activity-card.tsx  tray-popover.test.ts  tray-popover.tsx  trend-chart.test.ts  trend-chart.tsx  ui.tsx  update-control.tsx
apps/gui/src/data/: demo-data.test.ts  demo-data.ts
apps/gui/src/routes/: activity-route.tsx  alerts-route.tsx  overview-route.tsx  settings-route.tsx  trends-route.tsx
apps/gui/src/utils/: format.test.ts  format.ts
crates/codex-quota-core/: Cargo.toml
crates/codex-quota-core/src/: collector.rs  feasibility.rs  lib.rs  token_usage.rs
crates/codex-quota-core/src/codex/: app_server.rs  mod.rs  protocol.rs
crates/codex-quota-core/src/quota/: alert.rs  analyzer.rs  mod.rs  model.rs
crates/codex-quota-core/src/storage/: mod.rs
docs/: architecture.md  codex-quota-trends-spec.md  database.md  feasibility-poc.md  verification.md
docs/design/: ui-spec.md
scripts/: build-release-gui.sh  generate-update-manifest.mjs
